--- a/Parcial2HE.ipynb
+++ b/Parcial2HE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXeKnfhOUrGvASOEgO8NT9",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,15 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Carga de datos\n"
+      ],
+      "metadata": {
+        "id": "OHXOti96J-NG"
+      }
     }
   ]
 }
