--- a/Parcial2HE.ipynb
+++ b/Parcial2HE.ipynb
@@ -30,10 +30,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "7hXpy5W7JhH6",
-        "outputId": "b3b35303-0c27-4da5-9b3e-dfd101488caa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b3b35303-0c27-4da5-9b3e-dfd101488caa"
       },
       "outputs": [
         {
@@ -103,11 +103,11 @@
         "print(\"Path to dataset files:\", path)"
       ],
       "metadata": {
-        "id": "E0S8S0yVKFxi",
-        "outputId": "5c65a136-8609-4ff4-8f7d-bacfb3894fe6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E0S8S0yVKFxi",
+        "outputId": "5c65a136-8609-4ff4-8f7d-bacfb3894fe6"
       },
       "execution_count": 2,
       "outputs": [
@@ -138,6 +138,58 @@
           "name": "stderr",
           "text": [
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Instalación silenciosa de librerías\n",
+        "# Frameworks de Deep Learning\n",
+        "!pip install -q tensorflow\n",
+        "!pip install -q torch\n",
+        "!pip install -q keras\n",
+        "!pip install -q keras-tuner\n",
+        "\n",
+        "# Análisis y manipulación de datos\n",
+        "!pip install -q pandas\n",
+        "!pip install -q numpy\n",
+        "!pip install -q scikit-learn\n",
+        "\n",
+        "# Visualización\n",
+        "!pip install -q matplotlib\n",
+        "!pip install -q seaborn\n",
+        "!pip install -q plotly\n",
+        "\n",
+        "# Optimización y evaluación\n",
+        "!pip install -q optuna\n",
+        "!pip install -q tensorboard\n",
+        "!pip install -q scikit-optimize\n",
+        "\n",
+        "# Utilidades\n",
+        "!pip install -q tqdm\n",
+        "!pip install -q joblib\n",
+        "\n",
+        "# Análisis exploratorio y acceso a datos\n",
+        "!pip install -q ydata-profiling\n",
+        "!pip install -q datasets\n",
+        "!pip install -q huggingface_hub"
+      ],
+      "metadata": {
+        "id": "F033Y7TcLB1Y",
+        "outputId": "a662d7f9-cd78-424e-cb3c-ec07620e58e8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/363.4 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.4/363.4 MB\u001b[0m \u001b[31m12.9 MB/s\u001b[0m eta \u001b[36m0:00:29\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/363.4 MB\u001b[0m \u001b[31m38.4 MB/s\u001b[0m eta \u001b[36m0:00:10\u001b[0m\r\u001b[2K   \u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.9/363.4 MB\u001b[0m \u001b[31m56.3 MB/s\u001b[0m eta \u001b[36m0:00:07\u001b[0m\r\u001b[2K   \u001b[91m━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.7/363.4 MB\u001b[0m \u001b[31m68.2 MB/s\u001b[0m eta \u001b[36m0:00:06\u001b[0m"
           ]
         }
       ]
