Se creó con Colab

--- a/Parcial2HE.ipynb
+++ b/Parcial2HE.ipynb
@@ -194,6 +194,72 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip world-gdp-data.zip\n"
+      ],
+      "metadata": {
+        "id": "MN0NpnyhOXSK",
+        "outputId": "5f6e86f9-8abb-4339-e574-0bf4b2160485",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  world-gdp-data.zip\n",
+            "  inflating: country_codes.csv       \n",
+            "  inflating: gdp_data.csv            \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "df_gdp = pd.read_csv('gdp_data.csv')\n",
+        "df_codes = pd.read_csv('country_codes.csv')\n",
+        "\n",
+        "# Verifica las primeras filas\n",
+        "print(df_gdp.head())\n",
+        "print(df_codes.head())\n"
+      ],
+      "metadata": {
+        "id": "2GlOvScoOXbC",
+        "outputId": "8480af4f-d86f-44f3-b4d3-176a0cf71cf9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  country_name country_code  year        value\n",
+            "0  Afghanistan          AFG  1960  537777811.1\n",
+            "1  Afghanistan          AFG  1961  548888895.6\n",
+            "2  Afghanistan          AFG  1962  546666677.8\n",
+            "3  Afghanistan          AFG  1963  751111191.1\n",
+            "4  Afghanistan          AFG  1964  800000044.4\n",
+            "  country_code                     region         income_group\n",
+            "0          ABW  Latin America & Caribbean          High income\n",
+            "1          AFG                 South Asia           Low income\n",
+            "2          AGO         Sub-Saharan Africa  Lower middle income\n",
+            "3          ALB      Europe & Central Asia  Upper middle income\n",
+            "4          AND      Europe & Central Asia          High income\n"
+          ]
+        }
+      ]
     }
   ]
 }
